# obstacles_detector

./: CMakeLists.txt  README.md  fix_file.py  package.xml
config/: params.yaml
include/obstacle_detector/: obstacle_extractor.hpp  obstacle_visualizer.hpp
include/obstacle_detector/utilities/: math_utilities.h
install/: local_setup.sh  setup.sh
install/obstacle_detector/include/obstacle_detector/: obstacle_extractor.hpp  obstacle_visualizer.hpp
install/obstacle_detector/include/obstacle_detector/obstacle_detector/msg/: circle_obstacle.h  circle_obstacle.hpp  obstacles.h  obstacles.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h  segment_obstacle.h  segment_obstacle.hpp
install/obstacle_detector/include/obstacle_detector/obstacle_detector/msg/detail/: circle_obstacle__builder.hpp  circle_obstacle__functions.h  circle_obstacle__rosidl_typesupport_fastrtps_c.h  circle_obstacle__rosidl_typesupport_fastrtps_cpp.hpp  circle_obstacle__rosidl_typesupport_introspection_c.h  circle_obstacle__rosidl_typesupport_introspection_cpp.hpp  circle_obstacle__struct.h  circle_obstacle__struct.hpp  circle_obstacle__traits.hpp  circle_obstacle__type_support.h  circle_obstacle__type_support.hpp  obstacles__builder.hpp  obstacles__functions.h  obstacles__rosidl_typesupport_fastrtps_c.h  obstacles__rosidl_typesupport_fastrtps_cpp.hpp  obstacles__rosidl_typesupport_introspection_c.h  obstacles__rosidl_typesupport_introspection_cpp.hpp  obstacles__struct.h  obstacles__struct.hpp  obstacles__traits.hpp  obstacles__type_support.h  obstacles__type_support.hpp  segment_obstacle__builder.hpp  segment_obstacle__functions.h  segment_obstacle__rosidl_typesupport_fastrtps_c.h  segment_obstacle__rosidl_typesupport_fastrtps_cpp.hpp  segment_obstacle__struct.h  (+6 more)
install/obstacle_detector/include/obstacle_detector/utilities/: circle.h  figure_fitting.h  kalman.h  math_utilities.h  point.h  point_set.h  segment.h  tracked_obstacle.h
install/obstacle_detector/lib/obstacle_detector/: obstacle_extractor_node  obstacle_visualizer_node
install/obstacle_detector/share/ament_index/resource_index/package_run_dependencies/: obstacle_detector
install/obstacle_detector/share/ament_index/resource_index/parent_prefix_path/: obstacle_detector
install/obstacle_detector/share/ament_index/resource_index/rosidl_interfaces/: obstacle_detector
install/obstacle_detector/share/obstacle_detector/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
install/obstacle_detector/share/obstacle_detector/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_obstacle_detector__rosidl_generator_cExport-noconfig.cmake  export_obstacle_detector__rosidl_generator_cExport.cmake  export_obstacle_detector__rosidl_generator_cppExport.cmake  export_obstacle_detector__rosidl_generator_pyExport-noconfig.cmake  export_obstacle_detector__rosidl_generator_pyExport.cmake  export_obstacle_detector__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_obstacle_detector__rosidl_typesupport_fastrtps_cExport.cmake  export_obstacle_detector__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_obstacle_detector__rosidl_typesupport_fastrtps_cppExport.cmake  obstacle_detectorConfig-version.cmake  obstacle_detectorConfig.cmake  obstacle_detector__rosidl_typesupport_cExport-noconfig.cmake  obstacle_detector__rosidl_typesupport_cExport.cmake  obstacle_detector__rosidl_typesupport_cppExport-noconfig.cmake  obstacle_detector__rosidl_typesupport_cppExport.cmake  obstacle_detector__rosidl_typesupport_introspection_cExport-noconfig.cmake  obstacle_detector__rosidl_typesupport_introspection_cExport.cmake  obstacle_detector__rosidl_typesupport_introspection_cppExport-noconfig.cmake  obstacle_detector__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/obstacle_detector/share/obstacle_detector/config/: params.yaml
install/obstacle_detector/share/obstacle_detector/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/obstacle_detector/share/obstacle_detector/launch/: obstacle_extractor.launch.py  obstacle_visualizer.launch.py
install/obstacle_detector/share/obstacle_detector/msg/: CircleObstacle.idl  CircleObstacle.json  CircleObstacle.msg  Obstacles.idl  Obstacles.json  Obstacles.msg  SegmentObstacle.idl  SegmentObstacle.json  SegmentObstacle.msg
launch/: obstacle_extractor.launch.py  obstacle_visualizer.launch.py
log/: latest_build
src/: obstacle_extractor.cpp  obstacle_visualizer.cpp
src/nodes/: obstacle_extractor_node.cpp  obstacle_visualizer_node.cpp
