<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>obstacle_detector</name>
  <version>1.0.0</version>
  <description>Detect obstacles in form of line segments and circles from 2D laser scans.</description>
  <maintainer email="kkk121026@naver.com">SungjunJo</maintainer>
  <author>Mateusz Przybyla</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>rclcpp</depend>             
  <depend>rclcpp_components</depend>  
  <depend>rclcpp_lifecycle</depend>   
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>  
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>libarmadillo-dev</depend>
  <depend>laser_geometry</depend>

  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  <depend>rviz_ogre_vendor</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
